fixed overlap with navbar

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,8 @@ ul {
 .chat-module {
   max-height: 100vh;
   width: 100vw;
+
+  padding-top: 50px;
 }
 
 .login-module {
@@ -91,12 +93,4 @@ ul {
 
 .border {
   border: 1px solid black;
-}
-
-#main-navbar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 10;
 }
